--- a/css/styles.css
+++ b/css/styles.css
@@ -74,10 +74,16 @@ body {
   color: #2196f3;
 }
 .mainpage-title {
-  background-color: #2f303a;
   text-align: center;
   padding-top: 200px;
   padding-bottom: 200px;
+  max-width: 1600px;
+  margin: 0 auto;
+  background-image: linear-gradient(
+      rgba(47, 48, 58, 0.4),
+      rgba(47, 48, 58, 0.4)
+    ),
+    url(../images/officepicture.jpg);
 }
 .main-title {
   font-weight: 900;
@@ -197,6 +203,25 @@ body {
   margin-top: 10px;
   margin-bottom: 0;
   text-align: center;
+}
+.client-title {
+  font-size: 36px;
+  letter-spacing: 0.03em;
+  text-align: center;
+  line-height: 1.2;
+  margin-top: 0;
+  margin-bottom: 50;
+}
+.logo-client-item {
+  width: 170px;
+  height: 92px;
+  border: 1px solid #afb1b8;
+  border-radius: 4px;
+  cursor: pointer;
+}
+.logo-client-item:hover,
+.logo-client-item:focus {
+  border: 1px solid #2196f3;
 }
 .bottom {
   background: #2f303a;
